# clangd-proxy

./: CMakeLists.txt  README.md  main.cpp
src/: clangdProxy.cpp  clangdProxy.hpp  jsonProcessor.cpp  jsonProcessor.hpp  main.cpp  proxy.cpp  proxy.hpp  proxyFunctions.cpp
src/json/: baseTypes.hpp  messageTypes.hpp
src/processors/: baseProcessor.cpp  baseProcessor.hpp  jsonProcessor.cpp  jsonProcessor.hpp
